feat(*):新增微信、支付宝登录第三方SDK导入，登录界面优化更新

--- a/SocialCommunity/Podfile
+++ b/SocialCommunity/Podfile
@@ -6,6 +6,7 @@ target 'SocialCommunity' do
   use_frameworks!
   pod 'AFNetworking'
   pod 'SVProgressHUD'
+  pod 'WechatOpenSDK-XCFramework'
   # Pods for SocialCommunity
 
 end
