--- a/SocialCommunity/Podfile
+++ b/SocialCommunity/Podfile
@@ -7,6 +7,7 @@ target 'SocialCommunity' do
   pod 'AFNetworking'
   pod 'SVProgressHUD'
   pod 'WechatOpenSDK-XCFramework'
+  pod 'FloatingPanel'
   # Pods for SocialCommunity
 
 end
